<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment"
    android:background="#20262e"


    >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              >

              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="220dp"
                  android:scaleType="fitXY"
                  android:id="@+id/college_image"
                  android:src="@drawable/karad"

                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginHorizontal="@dimen/text_margin"
                  android:layout_marginTop="@dimen/text_margin"
                  android:fontFamily="@string/light"
                  android:text="@string/about_college"
                  android:textColor="#e9e8e8"
                  android:textSize="@dimen/text_size" />

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="@dimen/text_margin"
                  >





              </LinearLayout>

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Branch"
                  android:layout_marginTop="36dp"
                  android:textSize="@dimen/text_size"
                  android:layout_gravity="center_horizontal"
                  android:textColor="#e9e8e8"
                  android:fontFamily="@string/bold"

                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="22sp"
                  android:layout_marginTop="@dimen/text_margin"
                  android:padding="@dimen/text_margin"
                  android:layout_gravity="center"
                  android:textStyle="bold"
                  android:textColor="#e9e8e8"
                  android:text="Computer Engineering"></TextView>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                    android:layout_marginTop="@dimen/text_margin"
                 android:padding="@dimen/text_margin"
                 android:textColor="#e9e8e8"
                 android:text="@string/about_department"></TextView>
<androidx.viewpager.widget.ViewPager
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/viewPager"/>



          </LinearLayout>

</androidx.core.widget.NestedScrollView>