<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:background="#20262e"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:id="@+id/slider"
                    android:src="@drawable/img_1"
          />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="The GPK TALE"
    android:layout_marginTop="36dp"
    android:textSize="@dimen/text_size"
    android:layout_gravity="center_horizontal"
    android:textColor="#E9E8E8"
    android:fontFamily="@string/bold"

    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_college"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#E9E8E8"

                    android:fontFamily="@string/light"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:background="@color/darkColor"
                ><LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Departments"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textSize="@dimen/text_size"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#fff"
                        android:fontFamily="@string/bold"
                        />
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Computer Engineering"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/textColor"
                            android:fontFamily="@string/light"
                            android:layout_margin="8dp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Mechanical Engineering"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/textColor"
                            android:fontFamily="@string/light"
                            android:layout_margin="8dp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Medical Electronics"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/textColor"
                            android:fontFamily="@string/light"
                            android:layout_margin="8dp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Civil Engineering"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/textColor"
                            android:fontFamily="@string/light"
                            android:layout_margin="8dp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Instrumentation Engineering"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/textColor"
                            android:fontFamily="@string/light"
                            android:layout_margin="8dp"/>

                    </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/text_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contact Details"
                        android:textColor="#fff"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="36dp"
                        android:textSize="@dimen/text_size"
                        android:fontFamily="@string/bold"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginHorizontal="@dimen/text_margin"
                        android:textSize="@dimen/text_size"
                        android:textColor="#ffff"
                        android:fontFamily="@string/light"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Karad,Maharashtra"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_marginHorizontal="@dimen/text_margin"
                        android:textSize="@dimen/text_size"
                        android:textColor="#fff"
                        android:fontFamily="@string/light"
                        />
                       <ImageView
                           android:id="@+id/map"
                           android:layout_marginTop="16dp"
                           android:layout_width="wrap_content"
                           android:layout_height="230dp"
                           android:src="@drawable/karad"
                           android:scaleType="fitXY"/>



                </LinearLayout>


            </LinearLayout>


    </ScrollView>

</FrameLayout>